Fixed dirlink spacing

--- a/static/css/welcome.css
+++ b/static/css/welcome.css
@@ -385,6 +385,7 @@
 
   .folder-link {
     display: inline-block;
+    margin-left: -3px;
   }
 
   .folder-link a{
